Renamed package to remove conflict; quarkus doesnt like two modules using same package (split package)